--- a/.github/workflows/pkg_release.yaml
+++ b/.github/workflows/pkg_release.yaml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    setps:
+    steps:
       - uses: actions/checkout@v2
       - name: Run a one-line script
         run: echo Packaging citylocations for release!
